@@ -115,6 +115,9 @@
 	Extended vifm-media script to support MTP devices if simple-mtpfs tool is
 	installed.  Thanks to FlyCat (a.k.a. yanwh0311) and Alexandre Viau.
 
+	Allowed moving files via :rename (requires an interactive confirmation).
+	Thanks to aleksejrs.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
